syntax = "proto3";

package user.service.v1;

// import "google/api/annotations.proto";

option go_package          = "api/user/service/v1;v1";
option java_multiple_files = true;

// 接口
service User {
    // 得到用户
    rpc GetUser(GetUserReq) returns (GetUserReply) {}
    // 创建用户
    rpc CreateUser(CreateUserReq) returns (CreateUserReply) {}
    // 列出用户
    rpc ListUser(ListUserReq) returns (ListUserReply) {}
    //删除用户
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserReply) {}
    // 验证密码
    rpc VerifyPassword(VerifyPasswordReq) returns (VerifyPasswordReply) {}
    // 修改密码
    rpc UpdatePassword(UpdatePasswordReq) returns (UpdatePasswordReply) {}
}

message GetUserReq {
    int64 id = 1;
}

message GetUserReply {
    int64 id        = 1;
    string username = 2;
}

message CreateUserReq {
    string username = 1;
    string password = 2;
}

message CreateUserReply {
    int64 id        = 1;
    string username = 2;
}

message ListUserReq {
    repeated int64 ids = 1;
}

message ListUserReply {
    message User {
        int64 id        = 1;
        string username = 2;
    }
    repeated User results = 1;
}

message DeleteUserReq {
    int64 id = 1;
}

message DeleteUserReply {
    int64 id        = 1;
    string username = 2;
}

message VerifyPasswordReq {
    string username = 1;
    string password = 2;
}

message VerifyPasswordReply {
    bool ok = 1;
}

message UpdatePasswordReq {
    int64 id        = 1;
    string password = 2;
}

message UpdatePasswordReply {
    int64 id        = 1;
    string username = 2;
}